--- a/backend/api/static/css/crudacc.css
+++ b/backend/api/static/css/crudacc.css
@@ -158,6 +158,7 @@ tr:nth-child(even) {
     border: 1px solid #888;
     width: 40%;
     border-radius: 5px;
+    overflow-x: auto ;
 }
 
 .close {
@@ -265,7 +266,7 @@ tr:nth-child(even) {
     padding: 10px 10px;
     padding-bottom: 25px;
     border: none;
-    width: 6.9rem;
+    width: 7rem;
     border-radius: 5px;
     height: 30px;
 }
