--- a/backend/api/static/css/sidebar.css
+++ b/backend/api/static/css/sidebar.css
@@ -77,6 +77,7 @@
     background-color: #61396f; /* Violet color */
     color: white !important;
     border-radius: 10px;
+    padding: 10px;
 }
 
 /* bookkeeping dropdown button */
@@ -105,7 +106,7 @@ a,
 a:hover,
 .dropdown-btn:hover {
     background-color: #61396f; /* Violet color */
-    color: white !important;
+    color: white ;
     border-radius: 10px; /* Adjust this value for more or less rounding */
 }
 
